[gd_scene load_steps=4 format=2]

[ext_resource path="res://script/sol4.gd" type="Script" id=1]
[ext_resource path="res://assests/erro.ogg" type="AudioStream" id=2]

[sub_resource type="RectangleShape2D" id=1]

[node name="sol4" type="Area2D"]
collision_layer = 64
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
self_modulate = Color( 0.0666667, 0.752941, 0.286275, 1 )
shape = SubResource( 1 )

[node name="error" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "piano"
[connection signal="body_entered" from="." to="." method="_on_sol4_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_sol4_body_exited"]
